prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/clone_op_allowed.diag.txt
ERROR: expected 'IDENTIFIER'
testData/diagnostics/clone_op_allowed.nut.txt:10:12

let ct0 = clone t
let ct1 = t.clone()
            ^----


